# medman

./: Cargo.toml  data.json  musicfiles.md
src/: lib.rs  main.rs  markdown.rs  musicfile.rs  scan.rs  search.rs
