[package]
name = "medman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2" 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
audiotags = "0.2.7182"
markdown-gen = "1.2.1"
pls = "0.2.2"